# Shogun

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
assets/data/: README.md  history.sqlite  map_boundaries.json  schema.sql
assets/data/migrations/: 001_initial_history.sql  002_officer_profiles_relationships.sql  003_restrict_officer_gender.sql
assets/data/seeds/: 001_core.sql  002_supplemental_officers.sql  002_three_kingdoms_import.sql  003_officer_relationships.sql
assets/fonts/: README.md
assets/scenarios/: early_three_kingdoms.json
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/ai/: ai-interface.md  rule-based-ai.md
docs/src/architecture/: layering.md  module-map.md  overview.md
docs/src/core/: bevy-integration.md  hud-panels.md  i18n.md  screen-flow.md  settings-audio.md
docs/src/data/: history-db.md  map-boundaries.md  save-system.md  scenarios.md
docs/src/domain/: cities.md  combat.md  (+5 more)
locales/en-US/: ui.ftl
locales/zh-CN/: ui.ftl
migrations/: 001_initial_history.sql  002_backfill_officer_birth_years.sql  003_expand_officer_catalog.sql  004_refine_map_routes.sql  005_add_central_plain_routes.sql  006_normalize_officer_tags.sql  007_add_taipingdao_scenario.sql  008_expand_ad180_regional_factions.sql  009_correct_zhang_daoling_name.sql  010_dynamic_events.sql  011_technology_catalog.sql  012_split_scenario_era_names.sql  013_enhance_ad180_regional_rosters.sql
packaging/: README.md
packaging/linux/: io.github.zhubby.Shogun.desktop
packaging/macos/: Info.plist  Shogun.icns
packaging/windows/: README.md
src/: app.rs  app_settings.rs  build_info.rs  lib.rs  main.rs
src/agent/: child_name.rs  mod.rs  tools.rs
src/ai/: bailian.rs  mod.rs  openai.rs
src/core/: actions.rs  app_icon.rs  audio.rs  city_intel.rs  city_panel.rs  display_settings.rs  hud.rs  i18n.rs  labels.rs  map.rs  menu.rs  mod.rs  officer_portrait_ui.rs  portraits.rs  runtime.rs  settings.rs  shortcuts.rs  state.rs  style.rs
src/game/: ai.rs  city.rs  commands.rs  events.rs  history_db.rs  ids.rs  incidents.rs  map_boundary.rs  mod.rs  model.rs  officer.rs  personnel.rs  save.rs  scenario.rs  technology.rs
tests/: app_icons.rs  gameplay.rs  history_db.rs  map_boundaries.rs
(+14 files in other folders)
