[package]
name = "shogun"
version = "0.1.0"
edition = "2021"
default-run = "shogun"
build = "build.rs"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
directories = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
vergen-gitcl = "10.0.0-beta.8"
