[package]
name = "shogun"
version = "0.1.0"
edition = "2024"
description = "A turn-based Three Kingdoms strategy game built with Bevy and egui, featuring SQLite-backed historical data, rule-based AI, and bilingual UI"
license = "MIT"
readme = "README.md"
keywords = ["game", "strategy", "three-kingdoms", "bevy", "turn-based"]
categories = ["games"]
default-run = "shogun"
build = "build.rs"

[dependencies]
bevy = { version = "0.18", features = ["mp3"] }
bevy_asset_loader = "0.25"
bevy_egui = "0.39"
directories = "6"
egui-phosphor = "0.11"
egui_extras = { version = "0.33.3", default-features = false }
base64 = "0.22"
futures-util = "0.3"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
rodio = { version = "0.20.1", default-features = false, features = ["mp3"] }
rust-embed = "8.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1.47", default-features = false, features = ["rt", "rt-multi-thread", "time"] }
unic-langid = { version = "0.9", features = ["macros"] }
winit = "0.30"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
vergen-gitcl = "10.0.0-beta.8"
